[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "remoteperf"

description = "Generic python package used at VCC in order to measure performance"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["remoteperf", "python"]
license = { text = "BSD-3-Clause" } #FIXME
classifiers = ["Framework :: remoteperf", "Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
remoteperf = ["**"]

[tool.setuptools.packages.find]
include = ["remoteperf*"]
exclude = ["docs*", "tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "remoteperf.__version__" }
dependencies = { file = ["requirements/requirements.txt"] }

[tool.flake8]
per-file-ignores = "tests/*.py:F401,F811,E302,W504,W503,N818 remoteperf/*.py:E203"
max-line-length = 120
max-complexity = 12

[tool.black]
line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
min-similarity-lines = 8
disable = ["missing-docstring", "logging-fstring-interpolation"]

[tool.pylint.basic]
good-names = ["x", "y", "z", "f", "i", "logger", "n", "e"]

[tool.pylint.design]
max-returns = 8
min-public-methods = 1
max-args = 10
max-attributes = 12

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_any_expr = true
disallow_untyped_decorators = true
implicit_reexport = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
log_cli = 1
addopts = "--color=yes"
console_output_style = "progress"
log_cli_level = "CRITICAL"
log_cli_format = "[%(asctime)s] [%(process)d][%(thread)d] [%(levelname)s] [%(name)s:%(lineno)d]: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "CRITICAL"
log_format = "[%(asctime)s] [%(process)d][%(thread)d] [%(levelname)s] [%(name)s:%(lineno)d]: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
junit_family = "xunit2"

[tool.coverage.run]
omit = [".nox/**"]
